scripts/nullaway/annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8.txt
../annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8/src/br/com/bit/ideias/reflection/scanner/UrlResource.java:45: error: [NullAway] dereferenced expression resourceUri is @Nullable
        return new File(resourceUri.getSchemeSpecificPart());
                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8/src/br/com/bit/ideias/reflection/scanner/PackageScanner.java:173: error: [NullAway] dereferenced expression rootDirResource.getFile() is @Nullable
        return findMatchingFileSystemResources(rootDirResource.getFile().getAbsoluteFile(), subPattern);
                                                                        ^
    (see http://t.uber.com/nullaway )
../annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8/src/br/com/bit/ideias/reflection/scanner/FileSystemResource.java:26: error: [NullAway] method returns @Nullable, but superclass method br.com.bit.ideias.reflection.scanner.Resource.getURL() returns @NonNull
    @Nullable public URL getURL() {
                         ^
    (see http://t.uber.com/nullaway )
../annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8/src/br/com/bit/ideias/reflection/rql/query/QueryImpl.java:26: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.query = query;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8/src/br/com/bit/ideias/reflection/core/extrator/Extractor.java:89: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return targetClass;
		^
    (see http://t.uber.com/nullaway )
../annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8/src/br/com/bit/ideias/reflection/rql/query/Rql.java:186: error: [NullAway] dereferenced expression rql is @Nullable
        rql = rql.trim();
                 ^
    (see http://t.uber.com/nullaway )
../annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8/src/br/com/bit/ideias/reflection/test/artefacts/ClasseDominio.java:33: error: [NullAway] initializer method does not guarantee @NonNull field atributoPrivadoInteiro (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ClasseDominio() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8/src/br/com/bit/ideias/reflection/criteria/expression/BaseExpression.java:24: error: [NullAway] method returns @Nullable, but superclass method br.com.bit.ideias.reflection.criteria.expression.Expression.getValue() returns @NonNull
	@Nullable public String getValue() {
	                        ^
    (see http://t.uber.com/nullaway )
../annotator/urld44fdf4fee_nadilsons_reflection_dsl_tgz-pJ8-br_com_bit_ideias_reflection_SimplePerformanceTestJ8/src/br/com/bit/ideias/reflection/criteria/expression/BaseExpression.java:33: error: [NullAway] dereferenced expression searchType is @Nullable
		return searchType.matches(member, this);
		                 ^
    (see http://t.uber.com/nullaway )
9 errors
